# FP_APP

./: .env.example  .gitignore  CLAUDE.md  LICENSES.md  README.md  STATUS.md  app.py  eslint.config.js  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  test_access.txt  tsconfig.base.json
.github/workflows/: ci.yml
.streamlit/: config.toml
apps/web/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  Stil.tsx  Viewer2D.test.tsx  Viewer2D.tsx  Viewer3D.tsx  api.ts  main.tsx  plan2d.test.ts  plan2d.ts
data/: README.md  swipes.json
data/catalog/: README.md  bad.json  furniture.json  kueche.json  wohnen.json
data/images/: README.md  bad.json  kueche.json  wohnen.json
data/positions/: README.md  bad.json  kueche.json  wohnen.json
data/prices/: README.md
data/projects/: README.md
data/prompts/: README.md  kurator-rolle.md
data/rules/: README.md  bad.json  basis.json  kueche.json  wohnen.json
data/sequence/: README.md  bad.json  kueche.json  wohnen.json
data/style_images/: tags.json
data/taxonomy/: README.md  stilachsen.json
fp/: __init__.py  __main__.py  schemas.py
fp/m1_style/: embed.py  swipe.py
fp/m2_capture/: colmap.py  export.py  frames.py  mast3r.py  openings.py  openmvs.py  run.py  scale.py  structure.py  synthetic.py
fp/m3_planning/: assemble.py  llm.py  prompts.py  solver.py  viz.py
notebooks/: README.md
notebooks/scan-spike/: README.md  capture_check.py  spike_eval.ipynb
notebooks/scan-spike/ground-truth/: r1.json
notebooks/scan-spike/reports/: r1-vorabcheck.md
notebooks/scan-spike/testdata/r1/: capture-check.json
scripts/: setup.ps1  setup.sh
services/engines/: README.md  pyproject.toml
services/engines/scripts/: codegen.py  kurator_eval.py  update_goldens.py
services/engines/src/fp_engines/: __init__.py  api.py  auswertung.py  baseline.py  bauzeit.py  dxf.py  gltf.py  kueche.py  kurator.py  lv.py  pdf.py  solver.py  stil.py  zonen.py
services/engines/src/fp_engines/rules/: __init__.py  geometry.py  interpreter.py  scene.py
services/engines/tests/: test_auswertung.py  test_circulation.py  test_dokumente.py  test_health.py  test_kueche.py  test_kurator.py  test_lv_bauzeit.py  test_parity.py  test_schemas.py  test_solve_endpoint.py  test_solver.py  test_stil.py  test_validate_endpoint.py  test_zonen.py
tests/: test_capture.py  test_llm_contract.py  test_solver.py  test_vectors.py
tests/fixtures/: room_fixture.json
