[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fp-poc"
version = "0.1.0"
description = "Future Planning - Algorithmus-POC (Modul 1-3)"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "ortools>=9.8",
    "matplotlib>=3.8",
    "trimesh>=4.0",
    "scipy>=1.11",
    "pygltflib>=1.16",
    "groq>=0.8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Modul 1 (Stilanalyse) - CLIP-Embeddings
style = [
    "open_clip_torch>=2.24",
    "torch>=2.2",
    "pillow>=10.0",
]
# Modul 2 (Photogrammetrie-Nachbearbeitung) - native COLMAP/OpenMVS extern
capture = [
    "open3d>=0.18",
    "opencv-python>=4.9",
]
# Anthropic Claude (optional, Groq bevorzugt)
llm-anthropic = [
    "anthropic>=0.40",
]
# MASt3R neuronale Rekonstruktion (GPU required)
capture-gpu = [
    "torch>=2.2",
]
dev = [
    "pytest>=8.0",
    "streamlit>=1.34",
]

[project.scripts]
fp = "fp.__main__:main"

[tool.setuptools.packages.find]
include = ["fp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
