[project]
name = "fp-engines"
version = "0.1.0"
description = "Future Planning POC – Engines (Raum, Stil, Solver, Auswertung, Kurator-Adapter) als lokaler FastAPI-Dienst"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic>=2.10",
    "jsonschema>=4.23",
    "reportlab>=4.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
    "mypy>=1.14",
    "datamodel-code-generator>=0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fp_engines"]

[tool.ruff]
line-length = 100
extend-exclude = ["src/fp_engines/generated"]
target-version = "py312"

[tool.ruff.lint]
# Pyflakes/pycodestyle + Import-Sortierung + Bugbear + Upgrades
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
strict = true
mypy_path = "src"
exclude = ["src/fp_engines/generated"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[[tool.mypy.overrides]]
module = "reportlab.*"
ignore_missing_imports = true
